# Karl

./: CMakeLists.txt  Cli.cpp  Cli.h  Definitions.h  Defs.h  Eval.cpp  Eval.h  Gen.cpp  Gen.h  MagicSliders.cpp  MagicSliders.h  Magics.cpp  Magics.h  MoveGen.cpp  MoveGen.h  MoveGenerator.cpp  MoveGenerator.h  Moves.cpp  Moves.h  Notation.cpp  Notation.h  Position.cpp  Position.h  Search.cpp  Search.h  Zobrist.cpp  Zobrist.h  main.cpp  manual.txt
